# nhk2026_ws

./: .gitignore  README.md
src/nhk2026_bridge/: CMakeLists.txt  README.md  package.xml
src/nhk2026_bridge/config/: dansa_arm_canbridge.yml  ide_arm_canbridge.yml  joy2vel.yml  kaneko_arm_canbridge.yml  nhk2026_canbridge_r1.yml  nhk206_canbridge.yml  nhk206_canbridge_r1.yml  nhk206_canbridge_r2.yml  nhk206_canbridge_r2_step.yml  rmw_zenoh_config_local.json5  rmw_zenoh_config_lxc.json5  rmw_zenoh_config_r1.json5  rmw_zenoh_config_router.json5  rmw_zenoh_config_test.json5  step_leg_canbridge.yml  test_canbridge.yml  video_2nd_canbridge.yml
src/nhk2026_bridge/include/nhk2026_bridge/: joy2vel.hpp  nhk2026_canbridge.hpp  ros2can_bridge.hpp  test_canbridge.hpp
src/nhk2026_bridge/launch/: dansa_arm_can.launch.py  ide_arm_can.launch.py  kaneko_arm_can.launch.py  nhk2026_can.launch.py  nhk2026_can_r1.launch.py  nhk2026_can_r2.launch.py  step_leg.launch.py  test_move.launch.py  zenoh_router.launch.py  zenoh_session.launch.py
src/nhk2026_bridge/src/: joy2vel.cpp  nhk2026_canbridge.cpp  ros2can_bridge.cpp  test_canbridge.cpp
src/nhk2026_control/: CMakeLists.txt  package.xml
src/nhk2026_control/config/: arm_pos_20260402_105654.csv  arm_pos_20260402_120455.csv  arm_pos_20260403_045044.csv  arm_pos_20260403_133153.csv  arm_pos_20260415_101357.csv  arm_pos_20260415_104605.csv  arm_pos_20260415_104701.csv  arm_pos_20260415_212814.csv  arm_pos_20260415_213033.csv  arm_pos_20260415_220146.csv  arm_pos_20260423_175300.csv
src/nhk2026_control/include/nhk2026_control/: arm_path_plan.hpp  arm_path_plan_server.hpp  ide_arm_sim_bridge.hpp  ide_arm_teaching.hpp  joint_state_publisher_dansa.hpp  joint_state_publisher_ide.hpp  joint_state_publisher_step.hpp  robot_pos_teaching.hpp  vacuum_service.hpp  vacuum_stack_service.hpp
src/nhk2026_control/src/: arm_path_plan.cpp  arm_path_plan_server.cpp  ide_arm_sim_bridge.cpp  ide_arm_teaching.cpp  joint_state_publisher_dansa.cpp  joint_state_publisher_ide.cpp  joint_state_publisher_step.cpp  kdl_test.cpp  robot_pos_teaching.cpp  vacuum_service.cpp  vacuum_stack_service.cpp
src/nhk2026_localization/: CMakeLists.txt  package.xml
src/nhk2026_localization/launch/: lidar_test.launch.py
src/nhk2026_localization/map/: map.pgm  nhk2026_field_tamokuteki.h5
src/nhk2026_localization/src/: intergrated_mcl_node.cpp  joy2vel.cpp  joy_controller_node.cpp  joy_r1.cpp  lidar_filter.cpp  map_mesh_publisher.cpp  mcl_3d_node.cpp  mcl_manage.cpp  mcl_node.cpp  object_detection.cpp  vel_feedback_pass_through.cpp
src/nhk2026_msgs/: CMakeLists.txt  package.xml
src/nhk2026_msgs/action/: ArmMove.action  Follow.action  KnekoArm.action  NakamuraHand.action  StepMove.action  TakanoHand.action  TkanoHand.action
src/nhk2026_msgs/msg/: MicomStatus.msg  MultiLaserScan.msg  PathWithBox.msg  PoseWithBox.msg
src/nhk2026_msgs/srv/: ArmPathPlan.srv  SystemR2.srv  TfSet.srv
src/nhk2026_pursuit/: CMakeLists.txt  package.xml
src/nhk2026_pursuit/include/nhk2026_pursuit/: blossom_path_planner.hpp
src/nhk2026_pursuit/src/: blossom_path_planner.cpp  path_planner.cpp  pursuit.cpp
src/nhk2026_sim/: CMakeLists.txt  README.md  package.xml
src/nhk2026_sim/config/: bridge_config.yaml  nhk2026.rviz  nhk3d.rviz
src/nhk2026_sim/launch/: cpu_sim.launch.py  ide_arm_robot_description.launch.py  localization.launch.py  nhk2026_sim.launch.py  nhk_sim.launch.py  r2_2nd.launch.py  r2_step_climber.launch.py  robot_description.launch.py
src/nhk2026_sim/meshes/: R2_step_clibmer_arm_v2_1.stl  R2_step_climber_front_v2_1.stl  R2_step_climber_front_v2_2.stl  alm_1_v4_1.stl  alm_1_v4_2.stl  alm_with_lidar_v6_1.stl  base_link.stl  chassis_unit_v18_1.stl  chassis_unit_v18_3.stl  end_effector_v1_1.stl  fun_v13_1.stl
src/nhk2026_sim/models/field_nhk/: model.config  model.sdf
src/nhk2026_sim/models/field_nhk_soko/: model.sdf
src/nhk2026_sim/urdf/: ball.urdf  ide_arm.trans  ide_arm.xacro  ide_arm_macro.xacro  r2_2nd.trans  r2_2nd.xacro  r2_2nd_macro.xacro  r2_all.xacro  r2_robot.trans  r2_robot.xacro  r2_step_climber.xacro  robot.xacro
src/nhk2026_sim/worlds/: arm_plane.world  field.world  field_nhk.world  field_soko.world
src/nhk2026_system/: CMakeLists.txt  package.xml
src/nhk2026_system/config/: arena_bt.xml  ide_arm_bt.xml  martial_club_bt.xml  pratice_bt.xml  test.xml  video_2nd_bt.xml  wait_for_trigger.xml
src/nhk2026_system/config/area/: arena_bt.xml  forest_bt.xml  martial_club_bt.xml
src/nhk2026_system/config/common/: bt_node_models.xml  bt_rotate.xml  bt_vel_tim.xml  wait_for_aruco.xml  wait_for_trigger.xml
src/nhk2026_system/config/operation/: arm_down_step.xml  arm_front_step.xml  arm_put_shelf.xml  arm_put_shelf_lift.xml  arm_up_step.xml  kfs_stack.xml  kfs_stack_down.xml  kfs_stack_front.xml
src/nhk2026_system/include/nhk2026_system/: dansa_arm_action_server.hpp  ide_arm_action_server.hpp  step_leg_action_server.hpp  system_1st_video.hpp  tf_set_server.hpp
src/nhk2026_system/launch/: ide_arm_bt.launch.py
src/nhk2026_system/src/: bt_move_arm.cpp  dansa_arm_action_server.cpp  ide_arm_action_server.cpp  ide_arm_bt_node.cpp  kaneko_arm_action_server.cpp  nakamura_hand_server.cpp  path_bt_node.cpp  step_action_server.cpp  step_leg_action_server.cpp  system_1st_video.cpp  takano_hand_server.cpp  tf_set_server.cpp  video_2nd_bt_node.cpp
src/nhk2026_system/src/bt/: bt_follow_route.cpp  bt_generate_route.cpp  bt_leg_pub.cpp  bt_linear_path.cpp  bt_move_arm.cpp  bt_move_legs.cpp  bt_move_step.cpp  bt_reset_mcl.cpp  bt_rotate_sub.cpp  bt_sub_aruco.cpp  bt_takano_hand.cpp  bt_trigger.cpp  bt_vacuum.cpp  bt_vel_pub.cpp  bt_waypoint.cpp
src/nhk2026_vision/: CMakeLists.txt  package.xml
src/nhk2026_vision/config/: aruco_params.yaml  ost.yaml
src/nhk2026_vision/include/nhk2026_vision/: aruco.hpp  (+1 more)
src/nhk2026_vision/launch/: aruco_debug.lanch.py
src/nhk2026_vision/src/: aruco.cpp  aruco_node.cpp  aruco_node_opencv410.cpp  charuco_test.cpp
src/nhk2026_viz/: CMakeLists.txt  package.xml
src/nhk2026_viz/meshes/: field_color.glb
src/nhk2026_viz/src/: field_viz.cpp
(+144 files in other folders)
